--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,8 @@ logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 shortener.base-url=https://short-url
+
+#metrics
+management.endpoints.web.exposure.include=metrics,prometheus
+management.endpoint.prometheus.enabled=true
+management.metrics.enable.http.server.requests=true
