--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.application.name=shorten-url
 spring.profiles.active=dev
 
 #cassandra
-spring.cassandra.contact-points=localhost
+spring.cassandra.contact-points=${CASSANDRA_URL:localhost}
 spring.cassandra.local-datacenter=datacenter1
 spring.cassandra.keyspace-name=shorten_keyspace
 #spring.cassandra.schema-action=create_if_not_exists
