--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,3 +19,7 @@ shortener.base-url=https://short-url
 management.endpoints.web.exposure.include=metrics,prometheus
 management.endpoint.prometheus.enabled=true
 management.metrics.enable.http.server.requests=true
+
+#redis
+spring.data.redis.host=${REDIS_URL:localhost}
+spring.data.redis.port=6379
