--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
       - CASSANDRA_URL=${CASSANDRA_URL}
       - CASSANDRA_USERNAME=${CASSANDRA_USERNAME}
       - CASSANDRA_PASSWORD=${CASSANDRA_PASSWORD}
+      - REDIS_URL=${REDIS_URL}
     depends_on:
       cassandra-svc:
         condition: service_healthy
