--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,9 +16,10 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 shortener.base-url=https://short-url
 
 #metrics
-management.endpoints.web.exposure.include=metrics,prometheus
+management.endpoints.web.exposure.include=metrics,prometheus,health,info
 management.endpoint.prometheus.enabled=true
 management.metrics.enable.http.server.requests=true
+management.endpoint.health.show-details=always
 
 #redis
 spring.data.redis.host=${REDIS_URL:localhost}
