--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,7 +13,7 @@ logging.level.org.springframework.data.cassandra.core.cql.CqlTemplate=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
-shortener.base-url=https://short-url
+shortener.base-url=https://sho.rt
 
 #metrics
 management.endpoints.web.exposure.include=metrics,prometheus,health,info
