--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,3 +24,7 @@ management.endpoint.health.show-details=always
 #redis
 spring.data.redis.host=${REDIS_URL:localhost}
 spring.data.redis.port=6379
+
+#openapi
+springdoc.swagger-ui.path=/docs
+springdoc.api-docs.path=/docs/api
