--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,11 @@
             <artifactId>spring-boot-starter-data-redis</artifactId>
             <version>3.5.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.springdoc</groupId>
+            <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+            <version>2.8.8</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
