prometheus, grafana metrics redis cache hit/miss metrics

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,11 +15,19 @@ logging.level.org.springframework.web.filter.CommonsRequestLoggingFilter=DEBUG
 
 shortener.base-url=https://sho.rt
 
-#metrics
-management.endpoints.web.exposure.include=metrics,prometheus,health,info
+# Actuator/Prometheus metrics
+management.endpoints.web.exposure.include=*
+management.endpoint.metrics.enabled=true
 management.endpoint.prometheus.enabled=true
+management.metrics.export.prometheus.enabled=true
+
+# HTTP request metrics
 management.metrics.enable.http.server.requests=true
-management.endpoint.health.show-details=always
+
+# Custom tags
+management.metrics.tags.application=shorten-url
+management.metrics.tags.env=dev
+
 
 #redis
 spring.data.redis.host=${REDIS_URL:localhost}
