--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -46,6 +46,22 @@ services:
     networks:
       - shorten-url-network
 
+  prometheus:
+    image: prom/prometheus
+    ports:
+      - "9090:9090"
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml
+    depends_on:
+      - shorten-url-svc
+
+  grafana:
+    image: grafana/grafana
+    ports:
+      - "3000:3000"
+    depends_on:
+      - prometheus
+
 networks:
   shorten-url-network:
     driver: bridge
