--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -50,6 +50,8 @@ services:
     image: prom/prometheus
     ports:
       - "9090:9090"
+    networks:
+      - shorten-url-network
     volumes:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     depends_on:
@@ -59,6 +61,8 @@ services:
     image: grafana/grafana
     ports:
       - "3000:3000"
+    networks:
+      - shorten-url-network
     depends_on:
       - prometheus
 
