--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
 spring.application.name=shorten-url
 spring.profiles.active=dev
 
-#cassandra
-spring.cassandra.contact-points=${CASSANDRA_URL:localhost}
-spring.cassandra.local-datacenter=datacenter1
-spring.cassandra.keyspace-name=shorten_keyspace
-#spring.cassandra.schema-action=create_if_not_exists
-logging.level.org.springframework.data.cassandra.core.cql.CqlTemplate=DEBUG
-
+#mongodb
+spring.data.mongodb.uri=mongodb://${MONGO_USERNAME:root}:${MONGO_PASSWORD:password}@${MONGO_DATABASE_URL:localhost}:27017/${MONGO_DATABASE:shorten_mongodb}?authSource=admin
+#spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=shorten_mongodb
+# Enable MongoDB query logging
+logging.level.org.springframework.data.mongodb.core.MongoTemplate=DEBUG
+#logging.level.org.springframework.data.mongodb.core.MongoOperations=DEBUG
+#logging.level.org.mongodb.driver=DEBUG
 
 #logging
 logging.level.org.springframework.web=DEBUG
