docker compose update

--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-CASSANDRA_URL=cassandra-svc
-CASSANDRA_USERNAME=cassandra
-CASSANDRA_PASSWORD=cassandra
+
+MONGO_USERNAME=root
+MONGO_PASSWORD=password
+MONGO_DATABASE=shorten_mongodb
+MONGO_DATABASE_URL=mongo-svc
 
 REDIS_URL=redis-svc
